snapshots/syntax/library/functions/file/getattr/getattr_do_loop.snap
---
source: src/syntax/library/functions/file/getattr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DoStatement
      children:
        - kind: DoKeyword
          text: Do
        - kind: Whitespace
          text: " "
        - kind: WhileKeyword
          text: While
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: filename
            - kind: Whitespace
              text: " "
            - kind: InequalityOperator
              text: "<>"
            - kind: Whitespace
              text: " "
            - kind: StringLiteralExpression
              children:
                - kind: StringLiteral
                  text: "\"\""
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: attr
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: GetAttr
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: fullPath
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: LoopKeyword
          text: Loop
