snapshots/syntax/library/functions/file/getattr/getattr_error_handling.snap
---
source: src/syntax/library/functions/file/getattr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OnErrorStatement
      children:
        - kind: OnKeyword
          text: "On"
        - kind: Whitespace
          text: " "
        - kind: ErrorKeyword
          text: Error
        - kind: Whitespace
          text: " "
        - kind: GotoKeyword
          text: GoTo
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: ErrorHandler
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: attr
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: GetAttr
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: filename
            - kind: RightParenthesis
              text: )
